--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
+    "@types/chroma-js": "^2.1.3",
+    "@types/d3": "^7.1.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -26,6 +28,7 @@
   },
   "dependencies": {
     "chroma-js": "^2.4.2",
+    "d3": "^7.3.0",
     "sirv-cli": "^2.0.0"
   }
 }
